<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/title"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textLongMessage" />

    <EditText
        android:id="@+id/description"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:inputType="textLongMessage" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="112dp"
        android:contentDescription="@string/image_desc" />
    <Button
        android:id="@+id/imageFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="500dp"
        android:text="@string/choose_file"
        android:layout_marginLeft="100dp" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginTop="500dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp" />

</RelativeLayout>